--- a/app.css
+++ b/app.css
@@ -84,6 +84,13 @@ background-image:url(icons/fire-extinguisher.svg)
 {
 	background-color:#6F6;
 }
+
+#footer{
+	width: 100%;
+	position: relative;
+	min-height: 200px;
+	background-color:#666;
+}
 }
 
 /* Desktop Layout: 769px to a max of 1232px.  Inherits styles from: Mobile Layout and Tablet Layout. */
