--- a/app.css
+++ b/app.css
@@ -46,10 +46,16 @@ background-image:url(icons/fire-extinguisher.svg)
 {
 	background-color:#6F6;
 }
-#footer{
+#noticboard{
 	width: 100%;
 	position: relative;
 	min-height: 300px;
+	background-color:#666;
+}
+#footer{
+	width: 100%;
+	position: relative;
+	min-height: 200px;
 	background-color:#666;
 }
 
@@ -91,10 +97,17 @@ background-image:url(icons/fire-extinguisher.svg)
 	background-color:#6F6;
 }
 
-#footer{
+#noticboard{
 	width: 100%;
 	position: relative;
 	min-height: 200px;
+	background-color:#666;
+}
+
+#footer{
+	width: 100%;
+	position: relative;
+	min-height: 100px;
 	background-color:#666;
 }
 }
@@ -135,21 +148,28 @@ background-image:url(icons/fire-extinguisher.svg)
 		background-color:#999;
     left:0px;
     top:0px;
-    right:50%; //Increase it if you want a little space between the 2 divs.
+    right:70%; //Increase it if you want a little space between the 2 divs.
     min-height: 400px; // or bottom:0px; if you want a dynamic height
 }
 #rightDiv
 {
-    width:50%;
+    width:70%;
     float:right;
     min-height:400px;
 		background-color:#6F6;
 }
 
-#footer{
+#noticboard{
 	width: 100%;
 	position: relative;
 	min-height: 250px;
+	background-color:#666;
+}
+
+#footer{
+	width: 100%;
+	position: relative;
+	min-height: 100px;
 	background-color:#666;
 }
 
