--- a/app.css
+++ b/app.css
@@ -46,11 +46,18 @@ background-image:url(icons/fire-extinguisher.svg)
 {
 	background-color:#6F6;
 }
-#noticboard{
-	width: 100%;
-	position: relative;
-	min-height: 300px;
-	background-color:#666;
+#parentNotic
+{
+    position:relative;
+    overflow:hidden;
+}
+#leftNotic
+{
+	background-color:#999;
+}
+#rightNotic
+{
+	background-color:#6F6;
 }
 #footer{
 	width: 100%;
@@ -97,11 +104,18 @@ background-image:url(icons/fire-extinguisher.svg)
 	background-color:#6F6;
 }
 
-#noticboard{
-	width: 100%;
-	position: relative;
-	min-height: 200px;
-	background-color:#666;
+#parentNotic
+{
+    position:relative;
+    overflow:hidden;
+}
+#leftNotic
+{
+	background-color:#999;
+}
+#rightNotic
+{
+	background-color:#6F6;
 }
 
 #footer{
@@ -159,11 +173,26 @@ background-image:url(icons/fire-extinguisher.svg)
 		background-color:#6F6;
 }
 
-#noticboard{
-	width: 100%;
-	position: relative;
-	min-height: 250px;
-	background-color:#666;
+#parentNotic
+{
+    position:relative;
+    overflow:hidden;
+}
+#leftNotic
+{
+    position:absolute;
+		background-color:#999;
+    left:0px;
+    top:0px;
+    right:70%; //Increase it if you want a little space between the 2 divs.
+    min-height: 400px; // or bottom:0px; if you want a dynamic height
+}
+#rightNotic
+{
+    width:70%;
+    float:right;
+    min-height:400px;
+		background-color:#6F6;
 }
 
 #footer{
